openldap/lam-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lam
  namespace: openldap
spec:
  selector:
    matchLabels:
      app: lam
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: lam
    spec:
      containers:
      - name: lam
        image: ghcr.io/ldapaccountmanager/lam:latest@sha256:eb931c83f5f2e44c9c7965231c4d7e4cebdf702957581289bdd472dc6522a63c
        resources: {}
        ports:
        - containerPort: 80
        volumeMounts:
        - name: lam-data
          mountPath: /var/lib/ldap-account-manager
      volumes:
      - name: lam-data
        persistentVolumeClaim:
          claimName: lam-data
