openldap/openldap-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openldap
  namespace: openldap
spec:
  selector:
    matchLabels:
      app: openldap
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: openldap
    spec:
      priorityClassName: mdapi-critical
      containers:
      - name: openldap
        image: nfrastack/openldap:latest@sha256:5e5c8fdd1d7e3a9623500839699b258d0569bf965528b85c682ec5d0902f5d6c
        resources: {}
        ports:
        - containerPort: 389
        volumeMounts:
        - name: openldap-data
          mountPath: /data
        - name: openldap-import
          mountPath: /container/data/openldap/config/bootstrap/import/import.ldif
          subPath: import.ldif
      volumes:
      - name: openldap-data
        persistentVolumeClaim:
          claimName: openldap-data
      - name: openldap-import
        secret:
          secretName: openldap-import
