openldap/lam-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: lam
  namespace: openldap
spec:
  selector:
    app: lam
  ports:
    - port: 80
  type: ClusterIP
