openldap/openldap-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: openldap
  namespace: openldap
spec:
  selector:
    app: openldap
  ports:
    - port: 389
  type: NodePort
