openldap/lam-ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lam
  namespace: openldap
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/auth-url: http://oauth2-proxy-admin.oauth2-proxy.svc.cluster.local/admin/oauth2/auth
    nginx.ingress.kubernetes.io/auth-signin: https://auth.mdapi.ch/admin/oauth2/start?rd=https://$host$escaped_request_uri
    nginx.ingress.kubernetes.io/auth-response-headers: Authorization
    nginx.ingress.kubernetes.io/modsecurity-transaction-id: "$request_id"
spec:
  ingressClassName: nginx
  rules:
    - host: lam.mdapi.ch
      http:
        paths:
          - backend:
              service:
                name: lam
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
      - lam.mdapi.ch
      secretName: lam-cert
